# reopt-pysam-vn

./: .gitignore  AGENTS.md  Manifest.toml  NREL_API.env  NREL_API.env.example  Project.toml  README.md  REopt Julia README ext.md  activeContext.md  get_scenario_b_outage_times.py  lessons.md  pyproject.toml  requirements.txt  run_colab_scenarios.jl  run_pv_retail.jl  run_reopt_smoke.jl  walkthrough.md
.claude/: settings.local.json
.opencode/: package-lock.json
.playwright-mcp/: page-2026-04-01T22-07-31-885Z.yml  page-2026-04-01T22-07-43-531Z.yml  page-2026-04-01T22-09-03-799Z.yml  page-2026-04-01T22-09-46-570Z.yml  page-2026-04-01T22-10-16-042Z.yml
assets/: final-report-template.html  report-template.html
docs/: architecture.md  data_and_api.md  pitfalls.md  pysam.md  reopt_internals.md  scenarios.md  testing.md
legacy/: README.md
notebooks/: REopt_Tinh_test.ipynb  google_colab_simple_examples.ipynb
plans/: 2026-04-29-vietnam-regulatory-scenario-engine-plan.md  2026-05-03-allotrope-template-iterative-ppt-plan.md  README.md  pysam_integration_reorg_plan.md  saigon18_reopt_integration_plan.md
reports/: 2026-03-31-north-thuan-phase-1-environment-and-data-preparation.html  2026-03-31-north-thuan-phase-2-reopt-scenario-construction.html  2026-03-31-north-thuan-phase-3-local-julia-runner-and-solve-path.html  2026-03-31-north-thuan-phase-4-energy-comparison-extraction.html  2026-03-31-north-thuan-phase-5-dppa-settlement-post-processing.html  2026-03-31-north-thuan-phase-6-html-report-synthesis.html  2026-04-01-case-study-offtaker-physical-match-ranking.html  (+53 more)
(+444 files in other folders)
